WIP: Issue Progress

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,11 +10,14 @@
   <script type="text/javascript" src="spec/support/jasmine-2.0.0/jasmine.js"></script>
   <script type="text/javascript" src="spec/support/jasmine-2.0.0/jasmine-html.js"></script>
   <script type="text/javascript" src="spec/support/jasmine-2.0.0/boot.js"></script>
+  <script type="text/javascript" src="spec/support/fixtures.js"></script>
 
   <script type="text/javascript" src="src/common.js"></script>
+  <script type="text/javascript" src="src/issue.js"></script>
   <script type="text/javascript" src="src/rapidboard.js"></script>
 
   <script type="text/javascript" src="spec/common_spec.js"></script>
+  <script type="text/javascript" src="spec/issue_spec.js"></script>
   <script type="text/javascript" src="spec/rapidboard_spec.js"></script>
 </head>
 <body>
